--- a/app/assets/stylesheets/components/event_note.scss
+++ b/app/assets/stylesheets/components/event_note.scss
@@ -5,17 +5,22 @@
   padding: 10px;
   margin: auto;
   background-color: #EDEDED;
+  justify-content: space-between;
 }
 
 .event_note1{
   overflow: hidden;
   padding: 10px;
   text-align: justify;
-
+  padding: 2%;
+  flex: 2;
 }
 
 .event_note2{
   overflow: hidden;
-  padding: 10px
-
+  border-left: 2px solid black;
+  text-align: center;
+  margin: auto;
+  padding: inherit;
+  flex: 1
 }
