--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -9,21 +9,8 @@
       <div class="hero-text">
         <h1>Welcome on ShittyKebab!!</h1>
         <p>Please click on the Order button to.... actually order some awesome food!</p>
-        <button class="btn">order</button>
+        <button class="btn" onclick="location.href='users/new';">order</button>
       </div>
     </div>
-
-    <div class="event_note">
-      <div class="event_note1">
-        <h2>Lorem ipsum dolor sit amet</h2>
-          <p>ed imperdiet ultricies ligula, facilisis vulputate lorem tincidunt nec. Vivamus congue, massa hendrerit dapibus tincidunt, ligula ex aliquet ante, eu porta mi elit vitae justo. Nullam vel lobortis erat, in posuere augue. Ut egestas, urna ut pulvinar suscipit, felis risus eleifend lorem, quis condimentum purus nisl ut odio. Etiam nec urna dignissim mi mollis placerat. Maecenas molestie mi sapien, blandit scelerisque urna pharetra et. Curabitur varius elit vel luctus dictum. Vestibulum viverra blandit diam. Fusce eget magna quam.</p>
-      </div>
-      <div class="event_note2">
-        <h2>Lorem ipsum dolor sit amet</h2>
-          <p>ed imperdiet ultricies ligula, facilisis vulputate lorem tincidunt nec. Vivamus congue, massa hendrerit dapibus tincidunt, ligula ex aliquet ante, eu porta mi elit vitae justo. Nullam vel lobortis erat, in posuere augue. Ut egestas, urna ut pulvinar suscipit, felis risus eleifend lorem, quis condimentum purus nisl ut odio. Etiam nec urna dignissim mi mollis placerat. Maecenas molestie mi sapien, blandit scelerisque urna pharetra et. Curabitur varius elit vel luctus dictum. Vestibulum viverra blandit diam. Fusce eget magna quam.</p>
-      </div>
-
-    </div>
-
   </body>
 </html>
