Banner + footer fixed

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -14,17 +14,22 @@
   <div class="field">
     <%= form.label :Prénom %>
     <%= form.text_field :Prénom %>
-  </div>
+  </div><br>
 
   <div class="field">
     <%= form.label :Nom %>
     <%= form.text_field :Nom %>
-  </div>
+  </div><br>
 
   <div class="field">
     <%= form.label :Mail %>
     <%= form.text_field :Mail %>
-  </div>
+  </div><br>
+
+  <div class="field">
+    <%= form.label :Telephone %>
+    <%= form.telephone_field :telephone %>
+  </div><br>
 
   <div class="actions">
     <%= form.submit %>
